<resources>
    <string name="app_name">MoviesDB</string>
    <string name="result_could_not_be_load">Result could not be load</string>
    <string name="retry_button">Retry</string>
    <string name="query_is_empty">No results were found for this query</string>
    <string name="search_icon">Search movie</string>
    <string name="movie_image">movieImage</string>
    <string name="poster_image">poster image</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="release_date">Release date</string>
    <string name="add_to_watch_list">Add to Watch list</string>
    <string name="add_to_my_list">Add to my list</string>
    <string name="cast">Cast</string>
    <string name="actor_image">actor image</string>
    <string name="director">Director</string>
    <string name="recommendations">Recommendations</string>
    <string name="images">Images</string>
    <string name="image">image</string>
    <string name="discover_movies">Discover movies</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="popular_movies_and_search">Popular Movies and search</string>
    <string name="movies">Movies</string>
    <string name="my_account">My account</string>
    <string name="average_vote">Vote</string>
    <string name="descended_date">Descended date</string>
    <string name="ascended_date">Ascended date</string>
    <string name="popularity">Popularity</string>
    <string name="sort_by">Sort by</string>
    <string name="with_genre">With genre</string>
    <string name="try_to_use_discovery_movie_feature">Try to use discovery movie feature</string>
    <string name="loading_status">Loading...</string>
    <string name="minimum_amount_of_votes">Minimum amount of votes</string>
    <string name="_10">10+</string>
    <string name="_100">100+</string>
    <string name="_1000">1000+</string>
    <string name="average_vote_title">Average vote</string>
    <string name="_6">6+</string>
    <string name="_7">7+</string>
    <string name="_8">8+</string>
    <string name="_9">9+</string>
    <string name="release_year">Release year</string>
    <string name="my_watch_list">My watch list</string>
    <string name="show_all">Show all</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="add_new_custom_list">Add new custom list</string>
    <string name="title_of_list">Title of list</string>
    <string name="add_list">Add list</string>
    <string name="add_to_list">Add to list...</string>
    <string name="add_movie">Add movie</string>
    <string name="my_lists">My lists</string>
</resources>